--- a/pendu.html
+++ b/pendu.html
@@ -21,6 +21,7 @@
     <meta name="description" content="">
 
     <link rel="stylesheet" href="stylesheets/main.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
 
     <script defer src="./js/pendu.js"></script>
@@ -31,17 +32,34 @@
 
 <body class="body-pendu">
 
-    <section class="Pendu-container">
+    <section class="pendu-container">
 
         <p class="pendu-result"> - - - - - </p>
 
-        <form class="form-pendu">
+        <div class="pendu-displayLetter-container">
+            <p class="pendu-displayLetter">
+                K
+            </p>
+        </div>
+
+        <!-- <form class="form-pendu">
             <label for="penduLetterId">Lettre :</label>
             <input type="text" step=" 1" name="penduLetter" id="penduLetterId" maxlength="1" autocomplete="off">
-            <button>validation</button>
-        </form>
+            <button>
+                <i class='bx bxs-check-circle'></i>
+            </button>
+        </form> -->
+
+        <button class="hide-test">hide</button>
 
     </section>
+
+    <!-- <section class="pendu-suggested-letter">
+
+        content
+
+
+    </section> -->
 
 
 
