keep code cleaning, added selected letter animation

--- a/pendu.html
+++ b/pendu.html
@@ -36,7 +36,7 @@
 
         <p class="pendu-result"> - - - - - </p>
 
-        <div class="pendu-displayLetter-container">
+        <div class="pendu-displayLetter-container hiddenLetter">
             <p class="pendu-displayLetter">
                 K
             </p>
@@ -61,7 +61,6 @@
 
     </section> -->
 
-    <button class="hide-test">hide</button>
 
 
 </body>
