changing hiddenWord display method for anim purpose, still wip

--- a/pendu.html
+++ b/pendu.html
@@ -34,7 +34,11 @@
 
     <section class="pendu-container">
 
-        <p class="pendu-result"> - - - - - </p>
+        <p class="pendu-result">- - - - - </p>
+
+        <article class="pendu-result-container">
+
+        </article>
 
         <div class="pendu-displayLetter-container hiddenLetter">
             <p class="pendu-displayLetter">
