fixed hidden word display via individual element for each letter

--- a/pendu.html
+++ b/pendu.html
@@ -34,7 +34,7 @@
 
     <section class="pendu-container">
 
-        <p class="pendu-result">- - - - - </p>
+        <!-- <p class="pendu-result">- - - - - </p> -->
 
         <article class="pendu-result-container">
 
