code organization with pendu-tools.js

--- a/pendu.html
+++ b/pendu.html
@@ -24,7 +24,7 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
 
-    <script defer src="./js/pendu.js"></script>
+    <script defer type="module" src="./js/pendu.js"></script>
     <!-- defer : attend que toute la page html soit chargé = utilise ça quand on sait qu'on a un script et qui doit 
     être chargé en tout dernier -->
 
