js file for fetch, css change, all upperCase for the word to guess

--- a/pendu.html
+++ b/pendu.html
@@ -25,6 +25,7 @@
 
 
     <script defer type="module" src="./js/pendu.js"></script>
+    <script defer type="module" src="./js/pendu-fetch.js"></script>
     <!-- defer : attend que toute la page html soit chargé = utilise ça quand on sait qu'on a un script et qui doit 
     être chargé en tout dernier -->
 
