added visual life count, and animation

--- a/pendu.html
+++ b/pendu.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="icon.png"> -->
     <!-- Place favicon.ico in the root directory -->
 
-    <title>Pendu 😵</title>
+    <title>GhostWord 😵</title>
     <meta name="description" content="">
 
     <link rel="stylesheet" href="stylesheets/main.css">
@@ -35,12 +35,17 @@
 
     <section class="pendu-container">
 
-        <!-- <p class="pendu-result">- - - - - </p> -->
+        <!-- LIFE COUNT -->
+        <div class="life-main--container">
+            <p class="life-title">Fantôme(s) restant :</p>
+            <div class="life-count--container"></div>
+        </div>
 
-        <article class="pendu-result-container">
+        <!-- HIDDEN WORLD DiSPLAY -->
+        <div class="pendu-result-container">
+        </div>
 
-        </article>
-
+        <!-- LETTER PROPOSAL -->
         <div class="pendu-displayLetter-container hiddenLetter">
             <p class="pendu-displayLetter">
                 _
@@ -65,6 +70,24 @@
 
 
     </section> -->
+
+
+
+    <!-- 
+    <i class='bx bx-game'></i>
+   
+    <i class='bx bx-ghost'></i>
+ 
+    <i class='bx bxs-ghost'></i>
+
+
+    <i class='bx bx-smile'></i>
+    <i class='bx bx-angry'></i>
+    <i class='bx bx-shocked'></i>
+    <i class='bx bx-meh-blank'></i>
+    <i class='bx bx-dizzy'></i>
+    <i class='bx bx-tired'></i> -->
+
 
 
 
