--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>GhostWord 😵</title>
     <meta name="description" content="">
 
-    <link rel="stylesheet" type=“text/css” href="./stylesheets/main.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
 
