--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1"
+    >
 
     <!-- <meta property="og:title" content="">
     <meta property="og:type" content="">
@@ -18,14 +21,31 @@
     <!-- Place favicon.ico in the root directory -->
 
     <title>GhostWord 😵</title>
-    <meta name="description" content="">
+    <meta
+        name="description"
+        content=""
+    >
 
-    <link rel="stylesheet" href="stylesheets/main.css">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link
+        rel="stylesheet"
+        href="stylesheets/main.css"
+    >
+    <link
+        href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'
+        rel='stylesheet'
+    >
 
 
-    <script defer type="module" src="./js/pendu.js"></script>
-    <script defer type="module" src="./js/pendu-fetch.js"></script>
+    <script
+        defer
+        type="module"
+        src="./js/pendu.js"
+    ></script>
+    <script
+        defer
+        type="module"
+        src="./js/pendu-fetch.js"
+    ></script>
     <!-- defer : attend que toute la page html soit chargé = utilise ça quand on sait qu'on a un script et qui doit 
     être chargé en tout dernier -->
 
