refactor(organisation): review js files organisations and naming

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <script
         defer
         type="module"
-        src="./js/pendu.js"
+        src="./js/index.js"
     ></script>
     <script
         defer
         type="module"
-        src="./js/pendu-fetch.js"
+        src="./js/services/pendu-fetch.js"
     ></script>
     <!-- defer : attend que toute la page html soit chargé = utilise ça quand on sait qu'on a un script et qui doit 
     être chargé en tout dernier -->
